--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
         <ul>
-            <li><a href="https://en.wikipedia.org/wiki/1">Home</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/One_Thousand_and_One_Nights">About Us</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/One_Direction">Contact Us</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/1" target="_blank">Home</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/One_Thousand_and_One_Nights" target="_blank">About Us</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/One_Direction" target="_blank">Contact Us</a></li>
         </ul>
     </nav>
 
